--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+ 
 }
 
 .profile-img {
@@ -123,9 +124,15 @@ margin: 15px 0 ;
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+  
 
-  .bg-image {
-    background-image: url("./Mahelaka_mobile.png");
+  .bg-image{
+    /* background-image: url("./Mahelaka_mobile.png"); */
+    height: 100%;
+   
+}
+.bg-image img{
+  width: 100%;
 }
   .about {
        justify-content: flex-start;
@@ -150,11 +157,14 @@ margin: 15px 0 ;
 }
 
  /* Styles for small devices */
-@media only screen and (min-width: 360px) and (max-width: 599px) {
+@media only screen and (max-width: 599px) {
 
  .bg-image {
     background-image: url("./Mahelaka_mobile.png");
+    /* height: 100%; */
+    height: 100vh;
     }
+
 .flex .skills .cols {
   width: 100%;
 }
@@ -168,6 +178,9 @@ margin: 15px 0 ;
 }
 .flex {
   width: 65%;
+}
+.bg-image img{
+  visibility: hidden;
 }
 }
 
